[gd_scene load_steps=8 format=3 uid="uid://d272e85owkv3w"]

[ext_resource type="Texture2D" uid="uid://c55rw3uewrdcr" path="res://gane_assets/art/ui/PaperUiPanel.png" id="1_fwt8j"]
[ext_resource type="Script" uid="uid://dl4fc08qynb0m" path="res://scenes/pre_game.gd" id="1_rov16"]
[ext_resource type="FontFile" uid="uid://rhxjjebvv6hl" path="res://gane_assets/art/fonts/IPix中文像素字体.ttf" id="2_ucl24"]
[ext_resource type="Texture2D" uid="uid://d3h4hi6ay872i" path="res://gane_assets/art/ui/光标.png" id="3_rov16"]
[ext_resource type="Texture2D" uid="uid://cy16s5nliahug" path="res://icon.png" id="5_tii7i"]

[sub_resource type="Theme" id="Theme_rov16"]
default_font = ExtResource("2_ucl24")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rov16"]

[node name="PreGame" type="Node2D"]
script = ExtResource("1_rov16")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -74.0
offset_top = -35.0
offset_right = 1184.0
offset_bottom = 695.0
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 314.0
offset_top = 48.0
offset_right = 354.0
offset_bottom = 88.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 540.0
texture = ExtResource("1_fwt8j")
region_rect = Rect2(0, 0, 143, 137)
patch_margin_left = 25
patch_margin_top = 28
patch_margin_right = 27
patch_margin_bottom = 26

[node name="page1" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 91.0
offset_bottom = 72.0

[node name="开场白" type="RichTextLabel" parent="Control/page1"]
layout_mode = 0
offset_left = 20.0
offset_top = 31.0
offset_right = 387.0
offset_bottom = 219.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_ucl24")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "                 欢迎来到无限种子世界。

       你将在这里学习世界的基本设定，以及创建你的第一个无限种子角色。
 "

[node name="开场白2" type="RichTextLabel" parent="Control/page1"]
layout_mode = 0
offset_left = 25.0
offset_top = 121.0
offset_right = 392.0
offset_bottom = 309.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_ucl24")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "        首先，我们必须确认你对角色的属性设定.（将鼠标停止在属性名上将获得更多详细信息。）
"

[node name="光标" type="Sprite2D" parent="Control/page1"]
visible = false
position = Vector2(31, 266)
texture = ExtResource("3_rov16")

[node name="属性" type="Control" parent="Control/page1"]
anchors_preset = 0
offset_left = 54.0
offset_top = 253.0
offset_right = 135.0
offset_bottom = 451.0

[node name="str" type="Label" parent="Control/page1/属性"]
layout_mode = 0
offset_right = 88.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "力量(STR)"

[node name="AGI" type="Label" parent="Control/page1/属性"]
layout_mode = 0
offset_top = 25.0
offset_right = 88.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "敏捷(AGI)"

[node name="int" type="Label" parent="Control/page1/属性"]
layout_mode = 0
offset_top = 50.0
offset_right = 88.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "智力(INT)"

[node name="WIL" type="Label" parent="Control/page1/属性"]
layout_mode = 0
offset_top = 75.0
offset_right = 88.0
offset_bottom = 98.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "意志(WIL)"

[node name="CON" type="Label" parent="Control/page1/属性"]
layout_mode = 0
offset_top = 100.0
offset_right = 88.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "体质(CON)"

[node name="CHA" type="Label" parent="Control/page1/属性"]
layout_mode = 0
offset_top = 125.0
offset_right = 88.0
offset_bottom = 148.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "魅力(CHA)"

[node name="KNW" type="Label" parent="Control/page1/属性"]
layout_mode = 0
offset_top = 150.0
offset_right = 88.0
offset_bottom = 173.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "知识(KNW)"

[node name="MAG" type="Label" parent="Control/page1/属性"]
layout_mode = 0
offset_top = 175.0
offset_right = 88.0
offset_bottom = 198.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "魔力(MAG)"

[node name="加点情况" type="Control" parent="Control/page1"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control/page1/加点情况"]
layout_mode = 0
offset_left = 155.0
offset_top = 257.0
offset_right = 271.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "0"

[node name="Label2" type="Label" parent="Control/page1/加点情况"]
layout_mode = 0
offset_left = 155.0
offset_top = 282.0
offset_right = 271.0
offset_bottom = 305.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "0"

[node name="Label3" type="Label" parent="Control/page1/加点情况"]
layout_mode = 0
offset_left = 155.0
offset_top = 307.0
offset_right = 271.0
offset_bottom = 330.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "0"

[node name="Label4" type="Label" parent="Control/page1/加点情况"]
layout_mode = 0
offset_left = 155.0
offset_top = 332.0
offset_right = 271.0
offset_bottom = 355.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "0"

[node name="Label5" type="Label" parent="Control/page1/加点情况"]
layout_mode = 0
offset_left = 155.0
offset_top = 357.0
offset_right = 271.0
offset_bottom = 380.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "0"

[node name="Label6" type="Label" parent="Control/page1/加点情况"]
layout_mode = 0
offset_left = 155.0
offset_top = 382.0
offset_right = 271.0
offset_bottom = 405.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "0"

[node name="Label7" type="Label" parent="Control/page1/加点情况"]
layout_mode = 0
offset_left = 155.0
offset_top = 407.0
offset_right = 271.0
offset_bottom = 430.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "0"

[node name="Label8" type="Label" parent="Control/page1/加点情况"]
layout_mode = 0
offset_left = 155.0
offset_top = 432.0
offset_right = 271.0
offset_bottom = 455.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "0"

[node name="剩余点数" type="Label" parent="Control/page1"]
layout_mode = 0
offset_left = 113.0
offset_top = 218.0
offset_right = 273.0
offset_bottom = 241.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "剩余可自由分配点数："

[node name="重置" type="Button" parent="Control/page1/剩余点数"]
layout_mode = 0
offset_left = 191.0
offset_top = 2.0
offset_right = 228.0
offset_bottom = 23.0

[node name="Label" type="Label" parent="Control/page1/剩余点数/重置"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 43.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_ucl24")
text = "重置"

[node name="下一页" type="Label" parent="Control/page1"]
visible = false
layout_mode = 0
offset_left = 132.0
offset_top = 474.0
offset_right = 260.0
offset_bottom = 497.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "我已经准备好了。"

[node name="page2" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_rov16")

[node name="外号" type="RichTextLabel" parent="Control/page2"]
layout_mode = 0
offset_left = 37.0
offset_top = 33.0
offset_right = 374.0
offset_bottom = 79.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_ucl24")
text = "在无限种子世界里冒险，你需要一个外号。它将随着你在世界的冒险名扬天下。"

[node name="本名" type="RichTextLabel" parent="Control/page2"]
layout_mode = 0
offset_left = 41.0
offset_top = 171.0
offset_right = 274.0
offset_bottom = 338.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "你还需要一个真名。"

[node name="LineEdit" type="LineEdit" parent="Control/page2"]
layout_mode = 0
offset_left = 40.0
offset_top = 109.0
offset_right = 277.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rov16")
text = "不动之山"
max_length = 9

[node name="Line2D" type="Line2D" parent="Control/page2/LineEdit"]
position = Vector2(-27, 0)
points = PackedVector2Array(24, 26, 189, 26)
width = 2.0
default_color = Color(0.00392157, 0, 0, 1)

[node name="随机外号" type="Button" parent="Control/page2/LineEdit"]
layout_mode = 0
offset_left = 169.0
offset_top = 3.0
offset_right = 273.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("2_ucl24")
text = "随机获得一个"

[node name="LineEdit2" type="LineEdit" parent="Control/page2"]
layout_mode = 0
offset_left = 39.0
offset_top = 207.0
offset_right = 276.0
offset_bottom = 238.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rov16")
max_length = 9

[node name="Line2D" type="Line2D" parent="Control/page2/LineEdit2"]
position = Vector2(-27, 0)
points = PackedVector2Array(24, 26, 189, 26)
width = 2.0
default_color = Color(0.00392157, 0, 0, 1)

[node name="随机本名" type="Button" parent="Control/page2/LineEdit2"]
layout_mode = 0
offset_left = 169.0
offset_top = 3.0
offset_right = 273.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("2_ucl24")
text = "随机获得一个"

[node name="下一页" type="Label" parent="Control/page2"]
layout_mode = 0
offset_left = 139.0
offset_top = 346.0
offset_right = 267.0
offset_bottom = 369.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ucl24")
text = "我已经准备好了"

[node name="详细信息" type="NinePatchRect" parent="Control"]
visible = false
layout_mode = 0
offset_left = -169.0
offset_top = 238.0
offset_right = 1.0
offset_bottom = 430.0
texture = ExtResource("1_fwt8j")
region_rect = Rect2(0, 0, 143, 137)
patch_margin_left = 25
patch_margin_top = 28
patch_margin_right = 27
patch_margin_bottom = 26

[node name="信息" type="RichTextLabel" parent="Control/详细信息"]
layout_mode = 0
offset_left = 18.0
offset_top = 22.0
offset_right = 152.0
offset_bottom = 167.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_ucl24")
text = "力量是用来描述肌肉水平的值。
提高力量可以负载更重的装备而不会受到速度惩罚。"

[node name="哈吉米" type="Sprite2D" parent="Control"]
modulate = Color(1, 1, 1, 0.0823529)
position = Vector2(269, 268)
scale = Vector2(1.03458, 0.927566)
texture = ExtResource("5_tii7i")

[connection signal="mouse_entered" from="Control/page1/属性" to="." method="_on_属性_mouse_entered"]
[connection signal="mouse_exited" from="Control/page1/属性" to="." method="_on_属性_mouse_exited"]
[connection signal="button_down" from="Control/page1/剩余点数/重置" to="." method="_on_button_button_down"]
[connection signal="mouse_entered" from="Control/page1/下一页" to="." method="_on_下一页_mouse_entered"]
[connection signal="mouse_exited" from="Control/page1/下一页" to="." method="_on_下一页_mouse_exited"]
[connection signal="button_down" from="Control/page2/LineEdit/随机外号" to="." method="_on_随机外号_button_down"]
[connection signal="button_down" from="Control/page2/LineEdit2/随机本名" to="." method="_on_随机本名_button_down"]
[connection signal="mouse_entered" from="Control/page2/下一页" to="." method="_on_下一页_mouse_entered"]
[connection signal="mouse_exited" from="Control/page2/下一页" to="." method="_on_下一页_mouse_exited"]
